# crowsite

./: .gitignore  .gitmodules  CMakeLists.txt  design.txt
crow_test/: index.html
crow_test/data/db/: users.sqlite
crow_test/data/session/: .expirations  7IgWbfRRG3liKhkP.json  aubTl45vzPn5feHw.json  jlbpNSZuchBeVInZ.json  l5yQfzNDLXuq6Ic1.json  vUJR5OaiqtXupR8v.json  wDTvp2olKnTzXs0q.json
crow_test/static/css/: bar.css  body.css  git.css  home.css  menu_bar.css
crow_test/webcontent/: about.html  body_begin.part  body_end.part  default.html  git.html  home.html  index.html  login.html  menu_bar.part
crow_test/webcontent/projects/: post.html
include/crowsite/: beemovie.h  config.h  crow_includes.h  crow_pch.h  crow_utility.h  sql_helper.h  utility.h
include/crowsite/requests/: curl.h  jellyfin.h
include/crowsite/site/: auth.h  cache.h  home.h  posts.h  projects.h  routing.h  web.h
include/crowsite/util/: crow_conversion.h  crow_fix.h  crow_log.h  crow_session_util.h  crow_typedef.h  md_to_html.h  memory_reader.h
libs/crow/: CMakeLists.txt
libs/crow/include/crow/: http_connection.h  http_response.h  query_string.h
libs/crow/src/: http_response.cpp
libs/crow/tests/: catch.hpp
src/: main.cpp
src/crowsite/: utility.cpp
src/crowsite/requests/: curl.cpp  jellyfin.cpp
src/crowsite/site/: auth.cpp  cache.cpp  home.cpp  posts.cpp  projects.cpp  routing.cpp  web.cpp
src/crowsite/util/: crow_fix.cpp  crow_misc.cpp  crow_session_util.cpp  md_to_html.cpp  memory_reader.cpp
